<resources>
    <string name="app_name">OnlineStore</string>
    <string name="Your_Activities">Your Activities:</string>
    <string name="showOrders">Show ALl Orders</string>
    <string name="showOrderByUser">Show Order by username</string>
    <string name="updateOrder">Update Order Status</string>
    <string name="signUp">Sign up</string>
    <string name="username">Username:</string>
    <string name="firstname">Firstname:</string>
    <string name="lastname">Lastname:</string>
    <string name="password">Password:</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dob">DOB:</string>
    <string name="dateHint">DD/MM/YY</string>
    <string name="Joinonlinestore">Join online store</string>
    <string name="kidsProducts">Kids Products:</string>
    <string name="boysBlackBlazer">Boys Black Blazer</string>
    <string name="boysBlackBlazerCost">Boys Black Blazer Cost:25 CAD</string>
    <string name="processing">Processing</string>
    <string name="outForDelivery">Out For Delivery</string>
    <string name="orderUpdated">Order Updated</string>
    <string name="usernameReg">Username Address already Registered</string>
    <string name="ucontinue">You are Signed in Continue Shopping with us</string>
    <string name="tryAgain">Please try again</string>
    <string name="whiteTShirt">White T-Shirt</string>
    <string name="whiteTShirtCost">White T-Shirt Cost:30 CAD</string>
    <string name="girlsWhiteTop">Girls White Top</string>
    <string name="girlsWhiteTopCost">Girls White Top Cost:40 CAD</string>
    <string name="printedTop">Printed Top</string>
    <string name="printedTopCost">Printed Top Cost:50 CAD</string>
    <string name="signInButton">SIGN IN</string>
    <string name="joinButton">Join</string>
    <string name="comeOnIn">Come on in</string>
    <string name="menProducts">Men Products:</string>
    <string name="checkedShirt">Checked Shirt</string>
    <string name="checkedShirtCost">Checked Shirt Cost:35 CAD</string>
    <string name="cardiganNavyBlue">Cardigan Navy Blue</string>
    <string name="cardiganNavyBlueCost">Cardigan Navy Blue Cost:22 CAD</string>
    <string name="greyTShirt">Grey T-Shirt</string>
    <string name="greyTShirtCost">Grey T-Shirt Cost:35 CAD</string>
    <string name="checkSlimFitShirt">Check Slim Fit Shirt</string>
    <string name="checkSlimFitShirtCost">Check Slim Fit Shirt Cost:55 CAD</string>
    <string name="whiteSlimFitShirt">White Slim Fit Shirt</string>
    <string name="whiteSlimFitShirtCost">White Slim Fit Shirt Cost:32 CAD</string>
    <string name="yourOrders">Your Orders:</string>
    <string name="productName">Product Name</string>
    <string name="price">Price</string>
    <string name="status">Status</string>
    <string name="noDataFound">No Data Found</string>
    <string name="wrongUsernameAndPassword">Wrong Username Or Password</string>
    <string name="orderByUserName">Order By Username</string>
    <string name="showButton">Show</string>
    <string name="allOrders">All Orders</string>
    <string name="changeStatus">Change Status</string>
    <string name="orderID">Order ID:</string>
    <string name="updateOrder1">Update Order</string>
    <string name="womenProducts">Women Products:</string>
    <string name="croppedSwingSpotSweat">Cropped Swing Spot Sweat</string>
    <string name="croppedSwingSpotSweatCost">Cropped Swing Spot Sweat Cost:35 CAD</string>
    <string name="overSizedJumper">Oversized Jumper</string>
    <string name="overSizedJumperCost">Oversized Jumper Cost:23 CAD</string>
    <string name="oneShoulderFloralDress">One Shoulder Floral Dress</string>
    <string name="oneShoulderFloralDressCost">One Shoulder Floral Dress Cost:34 CAD</string>
    <string name="denimWhiteTop">Denim White Top</string>
    <string name="denimWhiteTopCost">Denim White Top Cost:21 CAD</string>
    <string name="asymmetricPolkaDotsDress">Asymmetric Polka Dots Dress</string>
    <string name="asymmetricPolkaDotsDressCost">Asymmetric Polka Dots Dress Cost:23 CAD</string>

</resources>
