<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mansi.mansiabhinav_mapd711_onlinestore.MenStoreActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="18dp"
                android:fontFamily="serif"
                android:text="@string/menProducts"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                tools:layout_editor_absoluteX="89dp"
                tools:layout_editor_absoluteY="16dp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:paddingTop="25dp"
                android:layout_height="250dp"
                android:clickable="true"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/picture1" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/checkedShirtCost"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:paddingTop="25dp"
                android:scaleType="fitXY"
                android:clickable="true"
                app:srcCompat="@drawable/picture2" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/cardiganNavyBlueCost"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:paddingTop="25dp"
                android:scaleType="fitXY"
                android:clickable="true"
                app:srcCompat="@drawable/picture3" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/greyTShirtCost"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/imageView11"
                android:paddingTop="25dp"

                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="fitXY"
                android:clickable="true"
                app:srcCompat="@drawable/picture4" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/checkSlimFitShirtCost"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:paddingTop="25dp"
                android:scaleType="fitXY"
                android:clickable="true"
                app:srcCompat="@drawable/picture5" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/whiteSlimFitShirtCost"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold|italic" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
