<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mansi.mansiabhinav_mapd711_onlinestore.WomenStoreActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:fontFamily="serif"
                android:text="@string/womenProducts"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                tools:layout_editor_absoluteX="64dp"
                tools:layout_editor_absoluteY="16dp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:clickable="true"
                android:scaleType="fitXY"
                android:paddingTop="25dp"
                app:srcCompat="@drawable/image1" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:lineSpacingExtra="36sp"
                android:text="@string/croppedSwingSpotSweat"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:clickable="true"
                android:scaleType="fitXY"
                android:paddingTop="25dp"
                app:srcCompat="@drawable/pict2" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/overSizedJumper"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="fitXY"
                android:paddingTop="25dp"
                android:clickable="true"
                app:srcCompat="@drawable/pict3" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/oneShoulderFloralDress"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="fitXY"
                android:paddingTop="25dp"
                android:clickable="true"
                app:srcCompat="@drawable/pict4" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/denimWhiteTop"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="fitXY"
                android:clickable="true"
                android:paddingTop="25dp"
                app:srcCompat="@drawable/pict5" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/asymmetricPolkaDotsDress"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
