<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mansi.mansiabhinav_mapd711_onlinestore.MainActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="500dp"
        android:layout_height="300dp"
        android:layout_alignParentStart="true"
        android:scaleType="center"
        app:srcCompat="@drawable/online" />

    <Button
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="81dp"
        android:text="@string/signInButton"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@color/white"
        android:background="@color/black"/>

    <Button
        android:id="@+id/join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/signin"
        android:layout_below="@+id/signin"
        android:background="@color/white"
        android:text="@string/joinButton"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:fontFamily="serif"
        android:lineSpacingExtra="8sp"
        android:text="@string/comeOnIn"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textHeaderSize"
        android:textStyle="bold|italic"
        android:typeface="normal" />
</RelativeLayout>
