<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mansi.mansiabhinav_mapd711_onlinestore.KidsStoreActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="17dp"
                android:fontFamily="serif"
                android:text="@string/kidsProducts"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                tools:layout_editor_absoluteX="88dp"
                tools:layout_editor_absoluteY="30dp" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="fitXY"
                android:clickable="true"
                android:paddingTop="25dp"
                app:srcCompat="@drawable/photo1" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/boysBlackBlazerCost"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="fitXY"
                android:clickable="true"
                android:paddingTop="25dp"
                app:srcCompat="@drawable/photo2" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/whiteTShirtCost"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="fitXY"
                android:clickable="true"
                android:paddingTop="25dp"
                app:srcCompat="@drawable/photo3" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/girlsWhiteTopCost"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="fitXY"
                android:paddingTop="25dp"
                android:clickable="true"
                app:srcCompat="@drawable/photo4" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/printedTopCost"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold|italic" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
