<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mansi.mansiabhinav_mapd711_onlinestore.UpdateOrderActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="19dp"
                android:fontFamily="serif"
                android:text="@string/changeStatus"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView39"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/orderID"
                android:layout_marginTop="24dp"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/editText9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:fontFamily="serif"
                android:inputType="textPersonName"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/black"
                android:text="@string/updateOrder1"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="14sp"
                android:layout_marginTop="24dp"
                android:textStyle="bold|italic" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
