<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mansi.mansiabhinav_mapd711_onlinestore.ShowOrderByUserActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView36"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="36dp"
                android:fontFamily="serif"
                android:text="@string/orderByUserName"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="169dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView36"
                android:layout_marginStart="35dp"
                android:layout_marginTop="24dp"
                android:fontFamily="serif"
                android:lineSpacingExtra="8sp"
                android:text="@string/username"
                android:textAlignment="viewStart"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="398dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/textView36"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:fontFamily="serif"
                android:inputType="textPersonName"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:background="@color/black"
                android:text="@string/showButton"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView38"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="24dp"
                android:fontFamily="serif"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="14sp"
                android:textStyle="bold|italic" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
